# interval-arith

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  interval-arith.cabal  package.yaml  stack.yaml
src/: IntervalArith.hs
src/Math/: Interval.hs
