name:                interval-arith
version:             0.0.0
description:         Checked interval arithmetic
synopsis:            Checked interval arithmetic
homepage:            https://github.com/adituv/interval-arith
bug-reports:         https://github.com/adituv/interval-arith/issues
license:             BSD3
license-file:        LICENSE
author:              Iris Ward
maintainer:          aditu.venyhandottir@gmail.com
copyright:           2018 Iris Ward
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     IntervalArith
                       
  ghc-options:         -Wall
  build-depends:       base
                     
  default-language:    Haskell2010
  

source-repository head
  type:                git
  location:            https://github.com/adituv/interval-arith.git

